bug fix in AI generator